// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopOverFooter : renders a snapshot of <PopOverFooter /> with mock props when affiliateReported is false 1`] = `
<footer
  className="footer"
>
  <button
    className="ant-btn ant-btn-lg ant-btn-dangerous"
    onClick={[Function]}
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372 0-89 31.3-170.8 83.5-234.8l523.3 523.3C682.8 852.7 601 884 512 884zm288.5-137.2L277.2 223.5C341.2 171.3 423 140 512 140c205.4 0 372 166.6 372 372 0 89-31.3 170.8-83.5 234.8z"
      />
    </svg>
    <span>
      Report Affiliate
    </span>
  </button>
</footer>
`;

exports[`PopOverFooter : renders a snapshot of <PopOverFooter /> with mock props when affiliateReported is true 1`] = `
<footer
  className="footer"
>
  <button
    className="ant-btn ant-btn-lg"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372 0-89 31.3-170.8 83.5-234.8l523.3 523.3C682.8 852.7 601 884 512 884zm288.5-137.2L277.2 223.5C341.2 171.3 423 140 512 140c205.4 0 372 166.6 372 372 0 89-31.3 170.8-83.5 234.8z"
      />
    </svg>
    <span>
      Reported
    </span>
  </button>
</footer>
`;
